# visMesh

./: .gitignore  README.md
report/: abstract.tex  analysisdesign.tex  benchmark.tex  bib.tex  chanvese.tex  conclusion.tex  description.tex  dsc.tex  future.tex  implementation.tex  introduction.tex  main.tex  maya.tex  results.tex
report/graphs/: 0simplex.graphml  1simplex.graphml  2simplex.graphml  3simplex.graphml  cubeCoarse.emf  cubeFine.emf  dagdg-example.graphml  module-design.graphml  module-implementation.graphml  vertex_overlay0.graphml  vertex_overlay1.graphml
report/img/: 0simplex.psd  1simplex.psd  2simplex.psd  3simplex.psd
slides/: buildit.sh  presentation.tex
visMesh/: CMakeLists.txt
visMesh/PLUGIN/: CMakeLists.txt  visMeshSetup.mel
visMesh/PLUGIN/include/: ChanVese.h  cubeMesh.h  gmesh.h  gsim.h  macros.h  visMesh.h
visMesh/PLUGIN/src/: ChanVese.cpp  cubeMesh.cpp  visMesh.cpp
